# speedy

./: README.md  default.nix  disguise.nix  example.def  shell.nix  speedy.cabal
app/: GlobalHotkeys.hs  Main.hs  MainGUI.hs  Types.hs
app/Export/: SplitsIO.hs
app/Plotter/: ChartJS.hs  GnuPlot.hs
